--- a/Python/deepLearningPetrobras.ipynb
+++ b/Python/deepLearningPetrobras.ipynb
@@ -2,6 +2,78 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def normalizeData(x_):\n",
+    "    x = x_\n",
+    "    print(x.shape)\n",
+    "    for k in range(0,x.shape[1]):\n",
+    "        x[:,k] = (x[:,k] - np.mean(x[:,k],axis=0))/np.std(x[:,k],axis=0)\n",
+    "    return x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def rearrange(x):\n",
+    "    output = np.zeros((x.shape[1],x.shape[0],1))\n",
+    "    print(x.shape)\n",
+    "    x = np.transpose(x);\n",
+    "    \n",
+    "    for k in range(0,x.shape[0]):\n",
+    "        output[k,:,0] = x[k,:]\n",
+    "    \n",
+    "    return output\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def initFilter(shape, poolsz):\n",
+    "    w = np.random.randn(*shape) / np.sqrt(np.prod(shape[1:]) + shape[0]*np.prod(shape[2:] / np.prod(poolsz)))\n",
+    "    return w.astype(np.float32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def convpool(inputs,filters, b, poolsize = (2,1)):\n",
+    "    \n",
+    "    convOut = conv2d(\n",
+    "        input = inputs, \n",
+    "        filters = filters, \n",
+    "        image_shape = ([inputs.shape[0],], inputs.shape[2], 1)\n",
+    "                    )\n",
+    "    \n",
+    "    poolOut = pool.pool_2d(input=convOut,\n",
+    "                                     ds = poolsize,\n",
+    "                                     ignore_border = True\n",
+    "                                    )\n",
+    "    \n",
+    "    return T.tensor.nnet.relu(poolOut + b.dimshuffle('x', 0, 'x', 'x'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 29,
    "metadata": {},
    "outputs": [
@@ -48,74 +120,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def normalizeData(x_):\n",
-    "    x = x_\n",
-    "    print(x.shape)\n",
-    "    for k in range(0,x.shape[1]):\n",
-    "        x[:,k] = (x[:,k] - np.mean(x[:,k],axis=0))/np.std(x[:,k],axis=0)\n",
-    "    return x"
+    "import subprocess\n",
+    "\n",
+    "ng = '4 ';\n",
+    "N = '16777216 ';\n",
+    "\n",
+    "EXEpath = \"D:\\\\\"\n",
+    "EXEname = 'exportador_idr2 ';\n",
+    "\n",
+    "filepath_tdms =  \"D:\\\\\"\n",
+    "filename_tdms = 'ciclo_2#001.tdms '\n",
+    "\n",
+    "filepath_raw = \"D:\\\\\"\n",
+    "filename_raw = 'temp.raw ';\n",
+    "\n",
+    "#commandline = EXEpath + EXEname + filepath_tdms + filename_tdms + ng + N + filepath_raw + filename_raw\n",
+    "            \n",
+    "#print(commandline)\n",
+    "\n",
+    "#subprocess.call(commandline)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def rearrange(x):\n",
-    "    output = np.zeros((x.shape[1],x.shape[0],1))\n",
-    "    print(x.shape)\n",
-    "    x = np.transpose(x);\n",
+    "import mmap\n",
+    "import numpy as np\n",
+    "\n",
+    "with open(filepath_raw + filename_raw,\"r+b\") as f:\n",
+    "    # memory-map the file, size 0 means whole file\n",
+    "    mm = mmap.mmap(f.fileno(), 0)\n",
     "    \n",
-    "    for k in range(0,x.shape[0]):\n",
-    "        output[k,:,0] = x[k,:]\n",
-    "    \n",
-    "    return output\n"
+    "numpymm = np.memmap(filepath_raw + filename_raw, np.int16,\"r+\")\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def initFilter(shape, poolsz):\n",
-    "    w = np.random.randn(*shape) / np.sqrt(np.prod(shape[1:]) + shape[0]*np.prod(shape[2:] / np.prod(poolsz)))\n",
-    "    return w.astype(np.float32)"
+    "import matlab.engine\n",
+    "eng = matlab.engine.start_matlab()\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eng.ImportadorRAW(filepath_raw + filename_raw,nargout=0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def convpool(inputs,filters, b, poolsize = (2,1)):\n",
-    "    \n",
-    "    convOut = conv2d(\n",
-    "        input = inputs, \n",
-    "        filters = filters, \n",
-    "        image_shape = ([inputs.shape[0],], inputs.shape[2], 1)\n",
-    "                    )\n",
-    "    \n",
-    "    poolOut = pool.pool_2d(input=convOut,\n",
-    "                                     ds = poolsize,\n",
-    "                                     ignore_border = True\n",
-    "                                    )\n",
-    "    \n",
-    "    return T.tensor.nnet.relu(poolOut + b.dimshuffle('x', 0, 'x', 'x'))"
+    "import numpy as np\n",
+    "\n",
+    "\n",
+    "rawNPFile = np.array(rawFile)\n",
+    "print(rawNPFile.shape)"
    ]
   },
   {
