huge changes to the main functions, now the model is attached to the object related to the CP

--- a/Python/PythonInterface/tester.ipynb
+++ b/Python/PythonInterface/tester.ipynb
@@ -6,6 +6,142 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def Agenda():\n",
+    "    telefone = 999\n",
+    "    nome = ''\n",
+    "    count = 0\n",
+    "    def __init__(self):\n",
+    "        pass\n",
+    "    \n",
+    "    def cadastro(self, nome_, telefone_)\n",
+    "        self.nome = nome_\n",
+    "        self.telefone = telefone_\n",
+    "        self.count += 1\n",
+    "    \n",
+    "    def deletaAgenda(self)\n",
+    "        self.nome = ''\n",
+    "        self.telefone = 999\n",
+    "        self.count = 0\n",
+    "    def printAgenda(self)\n",
+    "        print('Nome: ' + self.nome +'\\n')\n",
+    "        print('Telefone: ' + self.telefone +'\\n')\n",
+    "        print('Count: ' + self.count +'\\n')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('aaaaaaaa')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def plot_confusion_matrix(cm, classes,\n",
     "                          normalize=False,\n",
     "                          title='Confusion matrix',\n",
