improving materials and methods

--- a/Thesis/Text/introduction.tex
+++ b/Thesis/Text/introduction.tex
@@ -115,9 +115,10 @@ Where $\textbf{w}$ are the synapses (weights) and $\Phi(\cdot)$ is an arbitrary 
 
 
 
-\subsection{Multi Layer Perceptron}
+\subsection{Multi Layer Perceptron}\label{sec:MLP}
 
-\subsection{Backpropagation}
+\subsection{Backpropagation}\label{sec:backpropagation}
 
-\section{Acoustic Emission}
+\section{Acoustic Emission}\label{sec:acousticEmission}
 
+\section{Bibliography Review} \label{sec:bibliographyReview}
