--- a/Thesis/Text/tese.tex
+++ b/Thesis/Text/tese.tex
@@ -37,6 +37,7 @@
 \usepackage{color}
 %\usepackage{lstlisting}
 \usepackage{makecell}
+\usepackage{subcaption}
 
 \graphicspath{{images/}}
 
@@ -99,6 +100,11 @@
 
   \include{methods}
 
+
+  	\backmatter
+	\bibliographystyle{coppe-unsrt}
+	\bibliography{masterThesis}
+	
 \end{document}}
 %% 
 %%
